Resolved the errors

--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -39,22 +39,22 @@
         <br>
         <br>
         <div class="row row-form">
-            <div class="card card-prediction" id="cat">
+            <div class="card card-prediction" id="no">
                 <!-- <div class="card-image">
                     <img src="/static/img/cat.png">
 
                 </div> -->
                 <div class="card-content">
-                    <h5>It's a Cat</h5>
+                    <h5>No brain tumor shown</h5>
                 </div>
             </div>
-            <div class="card card-prediction" id="dog">
+            <div class="card card-prediction" id="yes">
                 <!-- <div class="card-image">
                     <img src="/static/img/dog.png">
 
                 </div> -->
                 <div class="card-content">
-                    <h5>It's a Dog</h5>
+                    <h5>Brain tumor present</h5>
                 </div>
             </div>
             <h5 id="error">Only .jpg files allowed</h5>
