--- a/static/css/custom-styles.css
+++ b/static/css/custom-styles.css
@@ -137,6 +137,8 @@ h2 {
 
 
 .row-cards {
+    display: flex;
+    justify-content: center;
     width: 50%;
     text-align: center;
 }
@@ -201,17 +203,19 @@ h2 {
 
 
 .row-side-blue {
-    height: 95px;
-    min-height: 95px;
-    margin: 0;
+    /* height: 95px; */
+    min-height: 35px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
     background: #3b6e9f;
     border: none;
-
-
+    color: #ffff;
+    padding: auto;
 }
 
 .row-description {
-    margin: 0px;
+    margin-left: 10px;
 }
 
 .row-description p {
@@ -322,6 +326,7 @@ h2 {
 
 
 .card-side {
+    min-height: 250px;
     padding-top: 0%;
     width: 94%;
     margin: auto;
@@ -721,7 +726,7 @@ button {
 
     }
 
-    .row-cards {
+     {
         width: 100%;
     }
 
