--- a/templates/base.html
+++ b/templates/base.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1.0, maximum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <!-- Search Engine Meta-->
-    <title>Cat Dog Image Classifier</title>
+    <title>Brain Tumor Detection</title>
     <meta name="Description"
           content="Image classifier trained to distinct between cats and dogs images. Convolutional Neural Network was built with Keras & Tensorflow(GPU).">
     <meta name="KeyWords"
@@ -63,31 +63,32 @@
                 <div class="col-xs-12 col-sm-3 col-md-3 col-lg-3 col-sm-pull-6 col-md-pull-6 col-lg-pull-6 col-lg-pull-6 plain-element">
                     <div class="row plain-element">
                         <div class="card card-side card-side-left">
-                            <div class="row row-side-blue"></div>
+                            <div class="row row-side-blue">Image Classifier</div>
                             <div class="row row-description">
-                                <div class="col-sm-4 col-md-4 plain-element text-center hashtag-column">
+                                <!-- <div class="col-sm-4 col-md-4 plain-element text-center hashtag-column">
                                     <img src="{{url_for('static', filename='img/logo.png')}}"
                                          class="img responsive img-column" alt="septellar">
-                                </div>
+                                </div> -->
                                 <div class="col-sm-8 col-md-8 plain-element col-features">
-                                    <h1>Classifier Algorithm </h1>
-                                    <p> The Characteristics</p>
+                                    <h1>Brain Tumor Detection </h1>
+                                    <!-- <p>Characteristics</p> -->
                                 </div>
                             </div>
                             <div class="row plain-element">
                                 <div class="card-content">
                                     <h6>
-                                        Image classifier trained to distinct between cats and dogs images. Convolutional
-                                        Neural Network was built with <b>Keras & Tensorflow(GPU)</b>
+                                        Image Classifier trained to detect Tumor in the brain from the images of scans uploaded.
                                     </h6>
                                 </div>
                             </div>
                         </div>
-                        <div class="card card-projects card-projects-left">
-                            <div class="row plain-element">
-                                <h1>CNN Architecture</h1>
-                            </div>
-                            <br>
+                        
+                    </div>
+                </div>
+                <div class="col-xs-12 col-sm-3 col-md-3 col-lg-3 plain-element">
+                    <div class="row plain-element">
+                        <div class="card card-side card-side-right">
+                            <div class="row row-side-blue">Characteristics</div>
                             <div class="row plain-element row-visit">
                                 <div class="col-xs-12 col-sm-12 col-md-12 plain-element">
                                     <h2> Accuracy</h2>
@@ -106,33 +107,9 @@
                                     <h5> 224 x 224 x 3</h5>
                                 </div>
                             </div>
-                             <div class="row plain-element row-visit">
-                                <div class="col-xs-12 col-sm-12 col-md-12 plain-element">
-                                    <h2> Activation Function</h2>
-                                    <h5> ReLu</h5>
-                                </div>
-                            </div>
-                            <div class="row plain-element row-visit">
-                                <div class="col-xs-12 col-sm-12 col-md-12 plain-element">
-                                    <h2> Convolutional Layers</h2>
-                                    <h5> 3</h5>
-                                </div>
-                            </div>
-                            <div class="row plain-element row-visit">
-                                <div class="col-xs-12 col-sm-12 col-md-12 plain-element">
-                                    <h2> Optimizer</h2>
-                                    <h5> Adam</h5>
-                                </div>
-                            </div>
-                            <div class="row plain-element row-visit">
-                                <div class="col-xs-12 col-sm-12 col-md-12 plain-element">
-                                    <h2> Loss Function</h2>
-                                    <h5> Binary Crossentropy</h5>
-                                </div>
-                            </div>
                         </div>
                     </div>
-                </div>
+                    </div>
                 
             </div>
         </div>
