--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -4,17 +4,14 @@
 <div class="row row-title">
     <div class="card card-title">
         <div class="row row-blue">
-            <h1 id="Text">Cat Dog Image Classifier </h1>
+            <h1 id="Text">Brain Tumor Detection </h1>
         </div>
         <div class="row  text-center row-text">
-            <p>Let me predict if it's a Cat or Dog on your Image</p>
+            <p>Add your brain scan to predict whether it has tumor or not</p>
         </div>
         <div class="row row-cards">
             <div class="col-xs-6 col-sm-6 col-md-6 text-center">
-                <img src="{{url_for('static', filename='img/cat.jpg')}}" class="img-responsive img-pet"/>
-            </div>
-            <div class="col-xs-6 col-sm-6 col-md-6 text-center">
-                <img src="{{url_for('static', filename='img/dog.jpg')}}" class="img-responsive img-pet"/>
+                <img src="{{url_for('static', filename='img/brain.jpg')}}" class="img-responsive img-pet"/>
             </div>
         </div>
         <div class="row plain-element">
