--- a/templates/base.html
+++ b/templates/base.html
@@ -92,13 +92,13 @@
                             <div class="row plain-element row-visit">
                                 <div class="col-xs-12 col-sm-12 col-md-12 plain-element">
                                     <h2> Accuracy</h2>
-                                    <h5> 89%</h5>
+                                    <h5> 88.46%</h5>
                                 </div>
                             </div>
                             <div class="row plain-element row-visit">
                                 <div class="col-xs-12 col-sm-12 col-md-12 plain-element">
-                                    <h2> Loss</h2>
-                                    <h5> 25%</h5>
+                                    <h2> Convolutional Layers</h2>
+                                    <h5> 3</h5>
                                 </div>
                             </div>
                             <div class="row plain-element row-visit">
